--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -59,6 +59,6 @@
   </table>
   <p class="text-right">
     <a href="{% url 'shop:product_list' %}" class="button light">Продолжить покупки</a>
-    <a href="{% url 'orders:order_create' %}" class="button">Проверить</a>
+    <a href="{% url 'orders:order_create' %}" class="button">Оформить</a>
   </p>
 {% endblock %}
